--- a/ListProjectsByGroup.html
+++ b/ListProjectsByGroup.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>LIST GIT PROJECTS BY AREA</title>
+        <title>LIST GIT PROJECTS BY GROUP</title>
         <meta charset="utf-8">
     </head>
     <style>
